cmake_minimum_required(VERSION 3.13.0)
project(Urlparse VERSION 1.0.0)
set(CMAKE_CXX_STANDARD 17)
option(BUILD_TESTS "Enable GoogleTesting " ON)
option(BUILD_PYTHON_TOOL "Enable python tool " OFF)
option(BUILD_BENCHMARK "Enable benchmark test" ON)
include(cmake/project_init.cmake)
add_subdirectory(src)
if (BUILD_TESTS)
    enable_testing()
    include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
    add_subdirectory(third_party/googletest)
    add_subdirectory(tests)
endif ()

if (BUILD_PYTHON_TOOL)
    add_subdirectory(tools)
endif()

if (BUILD_BENCHMARK)
    set(BENCHMARK_ENABLE_TESTING OFF)
    add_subdirectory(third_party/benchmark)
    add_subdirectory(tests/benchmark)
endif()