noinst_LIBRARIES=liburlparse.a
liburlparse_a_SOURCES= charutils.cpp \
	domainnamereader.cpp \
	glog.cpp \
	hostnormalizer.cpp \
	inetaddress.cpp \
	inputtextreader.cpp \
	pathnormalizer.cpp \
	stringbuilder.cpp \
	stringutils.cpp \
	url.cpp \
	urldetector.cpp \
	urldetectoroptions.cpp \
	urlmarker.cpp \
	urlpart.cpp \
	urlutil.cpp 

