noinst_PROGRAMS=testmain unitmain
testmain_SOURCES=testmain.cpp
unitmain_SOURCES=testCharUtils.cpp \
	testHostnormalizer.cpp \
	testInputReader.cpp \
	testNormalizedUrl.cpp \
	testPathNormalizer.cpp \
	testUrl.cpp \
	testurlutil.cpp \
	unitmain.cpp 

LIBS=-L$(top_srcdir)/src -lurlparse -lgtest -pthread
