noinst_LIBRARIES=liburlparse.a
liburlparse_a_SOURCES= charutils.cpp \
	domainnamereader.cpp \
	glog.cpp \
	hostnormalizer.cpp \
	inetaddress.cpp \
	inputtextreader.cpp \
	pathnormalizer.cpp \
	stringbuilder.cpp \
	stringutils.cpp \
	url.cpp \
	urldetector.cpp \
	urldetectoroptions.cpp \
	urlmarker.cpp \
	urlpart.cpp \
	urlutil.cpp 

liburlparse_CPPFLAGS=$(top_srcdir)/src/include # 头文件目录
liburlparsedir=$(libdir)

#liburlparse_PROGRAMS=liburlparse.so
#liburlparse_so_SOURCES= charutils.cpp \
#	domainnamereader.cpp \
#	glog.cpp \
#	hostnormalizer.cpp \
#	inetaddress.cpp \
#	inputtextreader.cpp \
#	pathnormalizer.cpp \
#	stringbuilder.cpp \
#	stringutils.cpp \
#	url.cpp \
#	urldetector.cpp \
#	urldetectoroptions.cpp \
#	urlmarker.cpp \
#	urlpart.cpp \
#	urlutil.cpp 

#liburlparse_so_LDFLAGS=-shared -fPIC 
#liburlparse_so_LDADD=
